<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/main_background_france_1"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <ProgressBar
        android:id="@+id/progress_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/list_oops_man"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/content_description_list_oops_man"
            android:src="@drawable/oops_man"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/list_oops_label"
            app:layout_constraintEnd_toEndOf="@+id/list_oops_label"
            app:layout_constraintStart_toStartOf="@+id/list_oops_label"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/error_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/list_label_oops_common"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="invisible"
            tools:visibility="invisible" />

        <Button
            android:id="@+id/error_again_button"
            style="@style/Theme.VseTury.SearchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/list_label_oops_button_common"
            android:visibility="invisible"
            tools:visibility="invisible" />

    </LinearLayout>

</merge>